<resources>
    <string name="app_name">MoBank</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mpesa_text">M-Pesa</string>
    <string name="airtel_text">Airtel</string>
    <string name="equity_text">Equity</string>
    <string name="kcb_text">KCB</string>
    <string name="coop_text">Coop</string>

    <string name="mpesa_transactions_text">Mpesa Transactions</string>
    <string name="transactions_text">Transactions</string>
    <string name="airtel_transactions_text">Airtel Transactions</string>
    <string name="add_mpesa_transaction_text">Add Mpesa Transaction</string>
    <string name="add_transaction_text">Add Transaction</string>
    <string name="add_airtel_transaction_text">Add Aitel Transaction</string>
    <string name="kcb_transactions_text">KCB Transactions</string>
    <string name="add_kcb_trnsaction_text">Add KCB Transaction</string>
    <string name="equity_transactions_text">Equity Transactions</string>
    <string name="add_equity_transaction_text">Add Equity Transaction</string>
    <string name="coop_transactions_text">COOP Transactions</string>
    <string name="add_coop_transaction_text">Add COOP Transaction</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="sign_out_text">Sign Out</string>

    <string name="forgot_password_prompt">Forgot Password?</string>
    <string name="phone_sign_in_text">Sign In With Phone</string>
    <string name="account_quiz">Do you have an account?</string>
    <string name="account_quiz_negative">Already have an account?</string>

    <string name="change_password_text">Change Password</string>

    <string name="name_hint">Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="id_number_hint">ID Number</string>

    <string name="customer_details_text">Customer Details</string>
    <string name="account_details_text">Account Details</string>
    <string name="transaction_details_text">Transaction Details</string>

    <string name="account_number_hint">Account Number</string>
    <string name="transaction_amount_hint">Transaction Amount</string>
    <string name="transaction_id_hint">Transaction ID</string>
    <string name="transaction_description_hint">Transaction Description</string>

    <string name="next_text">Next</string>
    <string name="finish_text">Finish</string>

    <string name="add_icon_text">Add Icon</string>

    <string name="deposit_text">Deposit</string>
    <string name="withdraw_text">Withdraw</string>

    <string name="warning_text">Something not right</string>
    <string name="transaction_type_error">Please setect a transaction type</string>
    <string name="transaction_amount_error">Invalid transaction amount, it must be a number</string>
    <string name="transaction_id_error">Transaction ID Field is Required</string>

</resources>