<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ke.co.propscout.mobank.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_view_transactions"
            app:destination="@id/listTransactionsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ke.co.propscout.mobank.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ke.co.propscout.mobank.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/listTransactionsFragment"
        android:name="ke.co.propscout.mobank.ui.transactions.list.ListTransactionsFragment"
        android:label="fragment_list_transactions"
        tools:layout="@layout/fragment_list_transactions" >
        <action
            android:id="@+id/action_add_transaction"
            app:destination="@id/addTransactionFragment" />
        <argument
            android:name="platform"
            app:argType="ke.co.propscout.mobank.data.models.Platform" />
    </fragment>
    <fragment
        android:id="@+id/addTransactionFragment"
        android:name="ke.co.propscout.mobank.ui.transactions.add.AddTransactionFragment"
        android:label="fragment_add_transaction"
        tools:layout="@layout/fragment_add_transaction" >
        <argument
            android:name="platform"
            app:argType="ke.co.propscout.mobank.data.models.Platform" />
    </fragment>
</navigation>