<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.home.HomeFragment">

    <GridLayout
        android:id="@+id/logos_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/mpesa_card"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_cards_height"
            android:layout_columnWeight="1"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/std_padding">

                <ImageView
                    android:layout_width="@dimen/home_cards_image_size"
                    android:layout_height="@dimen/home_cards_image_size"
                    android:contentDescription="@string/mpesa_text"
                    android:src="@mipmap/mpesa" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/kcb_card"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_cards_height"
            android:layout_columnWeight="1"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/std_padding">

                <ImageView
                    android:layout_width="@dimen/home_cards_image_size"
                    android:layout_height="@dimen/home_cards_image_size"
                    android:contentDescription="@string/kcb_text"
                    android:src="@mipmap/kcb" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/airtel_card"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_cards_height"
            android:layout_columnWeight="1"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/std_padding">

                <ImageView
                    android:layout_width="@dimen/home_cards_image_size"
                    android:layout_height="@dimen/home_cards_image_size"
                    android:contentDescription="@string/airtel_text"
                    android:src="@mipmap/airtel" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/equity_card"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_cards_height"
            android:layout_columnWeight="1"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/std_padding">

                <ImageView
                    android:layout_width="@dimen/home_cards_image_size"
                    android:layout_height="@dimen/home_cards_image_size"
                    android:contentDescription="@string/equity_text"
                    android:src="@mipmap/equity" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/coop_card"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_cards_height"
            android:layout_columnWeight="1"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/std_padding">

                <ImageView
                    android:layout_width="@dimen/home_cards_image_size"
                    android:layout_height="@dimen/home_cards_image_size"
                    android:contentDescription="@string/coop_text"
                    android:src="@mipmap/coop" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>